# story-attic

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  findings.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tailwind.config.ts  task_plan.md  vite.config.ts  vitest.config.ts
docs/: ユーザーガイド.md
specs/: 2026-03-27-story-attic-design.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  analysis.rs  chapter.rs  character.rs  correlation.rs  episode.rs  file_io.rs  glossary.rs  import_ai.rs  keyring.rs  material.rs  memo.rs  mod.rs  plot.rs  plot_thread.rs  project.rs  reader_reactions.rs  settings.rs  snapshot.rs  storage.rs  synopsis.rs  tag.rs  writing_support.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_snapshot_update.sql  003_ai_story_builder.sql  004_chapter_summary.sql  005_chapter_nodes.sql  006_timeline_title.sql  007_plot_pinned.sql  008_chapter_fields.sql  009_chapter_five_senses.sql  010_reader_reactions.sql
src-tauri/src/models/: ai.rs  analysis.rs  chapter.rs  character.rs  correlation.rs  episode.rs  glossary.rs  material.rs  memo.rs  mod.rs  plot.rs  plot_thread.rs  project.rs  reader_reaction.rs  settings.rs  snapshot.rs  synopsis.rs  tag.rs  writing_support.rs
src-tauri/src/parsers/: md_parser.rs  mod.rs  txt_parser.rs  types.rs
src/app/: App.tsx
src/features/ai/: AiChat.tsx  AiContextBar.tsx  (+19 more)
src/styles/: globals.css
(+155 files in other folders)
