[package]
name = "story-attic"
version = "0.1.0"
description = "StoryAttic — 小説執筆ツール"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "story_attic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
flate2 = "1"
base64 = "0.22"
thiserror = "1"
log = "0.4"
keyring = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

[package.metadata.bundle]
name = "StoryAttic"
identifier = "com.story-attic.app"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
